tests/semantic/valid/09_nested_blocks.tc
int main(void) {
    int x = 1;
    {
        int x = 2;
        {
            int x = 3;
        }
    }
    return x;
}
